<resources>
    <string name="app_name">JapanQuiz</string>
    <string name="welcome_text">Welcome to the Japan quiz!</string>
    <string name="quiz_tips_text">\nThis is a scrolling quiz. \nTo see the next question, just scroll!</string>

    <!--Tokyo Question set-->
    <string name="default_hint_tokyo_text">Tap submit to reveal answer</string>
    <string name="capital_question_text">What is the Capital city of Japan?</string>
    <string name="enter_city_edit_text_view">Enter city guess here</string>
    <string name="submit">Submit</string>
    <string name="tokyo_answer_text">Tokyo!</string>
    <string name="great_job_text">Great job!</string>
    <string name="not_right">Not right! The answer is Tokyo!</string>

    <!--Kyoto Question set-->
    <string name="kyoto_question_text">During the Edo period, what was the Capital city of Japan?</string>
    <string name="tokyo_answer">Tokyo</string>
    <string name="kyoto_answer">Kyoto</string>
    <string name="osaka_answer">Osaka</string>
    <string name="sapporo_answer">Sapporo</string>
    <string name="hiroshima_answer">Hiroshima</string>
    <string name="nice_work_text">Nice work. Kyoto was the capital during the Edo period. You\'ve got some basics down. How about a dive into the culture?</string>
    <string name="incorrect_text">Unfortunately, this is incorrect. Kyoto was the capital city of Japan during the Edo period.</string>

    <!--Tanuki Question set-->
    <string name="tanuki_question">What is the name of the Japanese Raccoon Dog?</string>
    <string name="tanuki_answer">Tanuki</string>
    <string name="tanuki_bit">Great Job! In Japanese culture, a Tanuki is a shapeshifting Raccoon dog often depicted with gold nuggets, perhaps some Sake, and unusually large testicles.</string>
    <string name="wasabi_answer">Wasabi</string>
    <string name="wasabi_bit">Incorrect. Wasabi is a green paste used to help nullify the potential hazards of eating raw fish (Sushi).</string>
    <string name="shinigami_answer">Shinigami</string>
    <string name="shinigami_bit">Incorrect. Shinigami is the God of Death</string>
    <string name="shimonoseki_answer">Shimonoseki</string>
    <string name="shimonoseki_bit">Incorrect. A city known for blowfish. Poison fish, poison fish, tasty fish!</string>

    <!--Rice question set-->
    <string name="rice_question">Which foods and drinks listed below are made with rice? \nCheck all that apply.</string>
    <string name="onigiri_answer">Onigiri</string>
    <string name="onigiri_bit">Yes, Japanese rice balls! Keep this one checked.</string>
    <string name="ramen_answer">Ramen</string>
    <string name="ramen_bit">Ramen? Incorrect! Ramen is not generally made with rice. Generally. Uncheck this one.</string>
    <string name="chashu_answer">Chashu</string>
    <string name="chashu_bit">Chashu? Incorrect! Chashu is a pork dish. Uncheck this one.</string>
    <string name="tamago_answer">Tamago</string>
    <string name="tamago_bit">Tamago? Incorrect! Tamago is an egg. Uncheck this one.</string>
    <string name="mochi_answer">Mochi</string>
    <string name="mochi_bit">Yes! Mochi is a rice dish! Keep this one checked.</string>
    <string name="sake_answer">Sake</string>
    <string name="sake_bit">Yes! Sake is a rice wine! Keep this one checked.</string>
    <string name="rice_answer_default">Let\'s get started!</string>
    <string name="rice_answer_set">That\'s all of them! Sake, onigiri, and of course, mochi!</string>

    <!--Macaque question set-->
    <string name="macaque_question">Which Japanese animal is notable for winter visits to spas?</string>
    <string name="macaque_answer">Macaque</string>
    <string name="macaque_bit">Correct! The Japanese Macaque is also the northern-most living nonhuman primate, preferring colder climates that see snow a few months out of the year.</string>
    <string name="tit_answer">Shijuukara</string>
    <string name="tit_bit">Incorrect. A Japanese bush tit.</string>
    <string name="dog_answer">Inu</string>
    <string name="dog_bit">Incorrect. Inu is a dog.</string>
    <string name="shinkansen_answer">Shinkansen</string>
    <string name="shinkansen_bit">Incorrect. Like flying on land, the Shinkansen Express train can travel 150&#8212;200mph.</string>
    <string name="macaque_answer_default">Go ahead and give it a guess!</string>

    <!--Misogi question-->
    <string name="misogi_question">Misogi is a Shinto purification ritual performed on the coldest day of the year.</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="misogi_answer_set">Think about the raw nature of Shinto.</string>
    <string name="misogi_answer_wrong">Incorrect! Participants purify their bodies by submersing themselves into cold water wearing next-to-nothing.</string>
    <string name="misogi_answer_right">Correct! Participants purify their bodies by submersing themselves into cold water wearing next-to-nothing.</string>

    <!--House entry question-->
    <string name="house_entry_question">What is a polite thing to say when entering a Japanese household?</string>
    <string name="dirty_house_answer">I am dirty and your house is clean. Please understand my dirtiness.</string>
    <string name="exclaim_house_answer">This house must be expensive! How fortunate you are!</string>
    <string name="disturb_house_answer">Please excuse this disturbance</string>
    <string name="polite_house_answer">I am polite. I am entering your house. Thank you for this invitation.</string>
    <string name="exclaim_bit">It is polite to say please excuse this disturbance when entering and leaving.</string>

    <!--Thank you-->
    <string name="thank_you">Thank you for playing the Japan quiz!</string>
    <string name="player_score_text_view">My score</string>
    <string name="player_total_score">0</string>
    <string name="artist_credit">All artwork in this quiz was created by Katie Heckey on her trip to Japan.</string>
    <string name="artist_website">www.katieheckey.com</string>
    <string name="score">Your score is: </string>

    <!--Content Descriptions-->
    <string name="welcome_description">A watercolor illustration of a shrine in Japan</string>
    <string name="kyoto_description">A watercolor illustration of the great 24 meter gate in Kyoto</string>
    <string name="tokyo_content_description">A sketch of Tokyo with Godzilla behind it in red</string>
    <string name="tanuki_description">An illustration of a Japanese raccoon dog</string>
    <string name="rice_description">An sketch of Mochi pounding in Japan</string>
    <string name="misogi_description">A sketch of Misogi cleansing ceremony</string>
    <string name="macaque_description">An illustration of arctic monkeys in a bath tub</string>

</resources>
